--- a/templates/base.html
+++ b/templates/base.html
@@ -25,12 +25,16 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a></li>
-              <li><a href="#">Github</a></li>
-              <li><a href="#">microservices</a></li>             
+              <li><a href="https://github.com/Totoola-Kehinde/health-service-checker" target="_blank">Github</a></li>
+              <li><a href="#">Microservices</a></li>             
             </ul>
           </div>
         </div>
       </nav>
+      <blockquote>
+        <p>MicroAPI Health Check Dashboard - Shows availabity of each microservice from the API.</p>
+        <small>Totoola Kehinde <cite title="Source Title">HNGi7</cite></small>
+      </blockquote>
 
       {% block content %}
 
