--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,13 @@
           </div>
         </div>
       </nav>
+      <div class="jumbotron">
+        <h1>MICROAPI HEALTH CHECK DASHBOARD</h1>
+        <p>Find Below list of microservices available on MicroAPI which have been sectioned: Users, Sms Notifications, and so on.</p>
+        <ul class="nav nav-pills">
+          <li class="active"><a href="#">Total Microservices <span class="badge">{{}}</span></a></li>
+        </ul>
+      </div>
       <blockquote>
         <p>MicroAPI Health Check Dashboard - Shows availabity of each microservice from the API.</p>
         <small>Totoola Kehinde <cite title="Source Title">HNGi7</cite></small>
