--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         <h1>MICROAPI HEALTH CHECK DASHBOARD</h1>
         <p>Find Below list of microservices available on MicroAPI which have been sectioned: Users, Sms Notifications, and so on.</p>
         <ul class="nav nav-pills">
-          <li class="active"><a href="#">Total Microservices <span class="badge">{{}}</span></a></li>
+          <li class="active"><a href="#">Total Microservices <span class="badge"></span></a></li>
         </ul>
       </div>
       <blockquote>
